'AVI file is broken' crash
* Edit post
* Delete post
* Report this post
* Reply with quote
I'm using vlc-0.9.0-win32.exe under Win Vista HP SP1.
When trying to open avi file I'm receiving a message: 'AVI index: This AVI file is broken. Seeking will not work correctly. Do you want to repair it?'. If I answer 'repair' the VLC crashes. Here is the log:
-- logger module started --
main debug: CPU has capabilities 486 586 MMX MMXEXT FPU
main debug: looking for memcpy module: 3 candidates
main debug: using memcpy module "memcpymmxext"
main debug: thread 4596 (Interaction control) created at priority 0 (interface/interaction.c:379)
main debug: thread started
main debug: Creating an input for 'Media Library'
main debug: Input is a meta file: disabling unneeded options
main debug: `file/xspf-open://C:\Users\VK\AppData\Roaming\vlc\ml.xspf' gives access `file' demux `xspf-open' path `C:\Users\VK\AppData\Roaming\vlc\ml.xspf'
main debug: creating access 'file' path='C:\Users\VK\AppData\Roaming\vlc\ml.xspf'
main debug: looking for access module: 2 candidates
access_file debug: opening file `C:\Users\VK\AppData\Roaming\vlc\ml.xspf'
main debug: using access module "access_file"
main debug: TIMER module_Need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: Using AStream*Stream
main debug: pre-buffering...
main debug: received first data for our buffer
main debug: creating demux: access='file' demux='xspf-open' path='C:\Users\VK\AppData\Roaming\vlc\ml.xspf'
main debug: looking for demux module: 1 candidate
playlist debug: using XSPF playlist reader
main debug: using demux module "playlist"
main debug: TIMER module_Need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: `file/xspf-open://C:\Users\VK\AppData\Roaming\vlc\ml.xspf' successfully opened
main debug: looking for xml module: 2 candidates
main debug: using xml module "xml"
main debug: TIMER module_Need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
playlist debug: parsed 14 tracks successfully
main debug: deleting item `directory://C:/VIDEO/MUSIC/MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD'
main debug: removing module "xml"
main debug: EOF reached
main debug: control type=1
main debug: removing module "playlist"
main debug: removing module "access_file"
main debug: Destroying the input for 'Media Library'
main debug: TIMER input launching for 'Media Library' : 5.000 ms - Total 5.000 ms / 1 intvls (Avg 5.000 ms)
main debug: waiting for thread completion
main debug: thread started
main debug: thread 4672 (preparser) created at priority 0 (playlist/thread.c:80)
main debug: waiting for thread completion
main debug: thread started
main debug: thread 4684 (fetcher) created at priority 0 (playlist/thread.c:110)
main debug: waiting for thread completion
main debug: thread started
main debug: thread 4680 (playlist) created at priority 0 (playlist/thread.c:119)
main debug: looking for interface module: 1 candidate
main debug: using interface module "hotkeys"
main debug: TIMER module_Need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: thread 4696 (interface) created at priority 0 (interface/interface.c:168)
main debug: looking for interface module: 1 candidate
main debug: rebuilding array of current - root Playlist
main debug: rebuild done - 0 items, index -1
main debug: thread started
logger: VLC media player - version 0.9.0-test3-20080731-0004 Grishenko - (c) 1996-2008 the VideoLAN team
logger:
Warning: if you can't access the GUI anymore, open a command-line window, go to the directory where you installed VLC and run "vlc -I qt"
logger: using logger...
logger warning: no log filename provided, using `vlc-log.txt'
logger debug: opening logfile `vlc-log.txt'
main debug: using interface module "logger"
main debug: TIMER module_Need() : 151.000 ms - Total 151.000 ms / 1 intvls (Avg 151.000 ms)
main debug: thread 4912 (interface) created at priority 0 (interface/interface.c:168)
main debug: thread started
main: Running vlc with the default interface. Use 'cvlc' to use vlc without interface.
main debug: looking for interface module: 3 candidates
main debug: using interface module "qt4"
main debug: TIMER module_Need() : 330.000 ms - Total 330.000 ms / 1 intvls (Avg 330.000 ms)
main debug: thread 4968 (interface) created at priority 0 (interface/interface.c:168)
main debug: thread started
main debug: starting new item
main debug: processing request item null node Playlist skip 0
main debug: nothing to play
main debug: uses deprecated vlc_object_get(397)
qt4 debug: Error while initializing qt-specific localization
main debug: adding item `01 Collapse.avi' ( C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi )
main debug: rebuilding array of current - root Playlist
main debug: rebuild done - 1 items, index -1
main debug: starting new item
main debug: processing request item 01 Collapse.avi node Playlist skip 0
main debug: resyncing on 01 Collapse.avi
main debug: 01 Collapse.avi is at 0
main debug: creating new input thread
main debug: Creating an input for '01 Collapse.avi'
main debug: waiting for thread completion
main debug: thread started
main debug: `C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi' gives access `' demux `' path `C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi'
main debug: thread 5844 (input) created at priority 1 (input/input.c:367)
main debug: creating demux: access='' demux='' path='C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi'
qt4 debug: I was here, updating your status
main debug: looking for access_demux module: 2 candidates
main debug: TIMER module_Need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: creating access '' path='C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi'
main debug: looking for access module: 6 candidates
vcd debug: trying .cue file: C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.cue
vcd debug: could not find .cue file
access_file debug: opening file `C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi'
main debug: using access module "access_file"
main debug: TIMER module_Need() : 4.000 ms - Total 4.000 ms / 1 intvls (Avg 4.000 ms)
main debug: Using AStream*Stream
main debug: pre-buffering...
main debug: received first data for our buffer
main debug: pre-buffering done 1408981 bytes in 0s - 458499 kbytes/s
main debug: creating demux: access='' demux='' path='C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi'
main debug: looking for demux module: 59 candidates
avi debug: found Chunk fourcc:46464952 (RIFF) size:23595084 pos:0
avi debug: found LIST chunk: 'AVI '
avi debug: <list 'AVI '>
avi debug: found Chunk fourcc:5453494c (LIST) size:8822 pos:12
avi debug: found LIST chunk: 'hdrl'
avi debug: <list 'hdrl'>
avi debug: found Chunk fourcc:68697661 (avih) size:56 pos:24
avi debug: avih: streams:2 flags: HAS_INDEX IS_INTERLEAVED TRUST_CKTYPE 720x480
avi debug: found Chunk fourcc:5453494c (LIST) size:4240 pos:88
avi debug: found LIST chunk: 'strl'
avi debug: <list 'strl'>
avi debug: found Chunk fourcc:68727473 (strh) size:56 pos:100
avi debug: strh: type:vids handler:0x44495658 samplesize:1036800 29.97fps
avi debug: found Chunk fourcc:66727473 (strf) size:40 pos:164
avi debug: strf: video:XVID 720x480 planes:1 24bpp
avi debug: found Chunk fourcc:4b4e554a (JUNK) size:4116 pos:212
avi debug: </list 'strl'>
avi debug: found Chunk fourcc:5453494c (LIST) size:4230 pos:4336
avi debug: found LIST chunk: 'strl'
avi debug: <list 'strl'>
avi debug: found Chunk fourcc:68727473 (strh) size:56 pos:4348
avi debug: strh: type:auds handler:0x00000001 samplesize:1 16000.00fps
avi debug: found Chunk fourcc:66727473 (strf) size:30 pos:4412
avi debug: strf: audio:0x0055 channels:2 48000Hz 0bits/sample 125kb/s
avi debug: found Chunk fourcc:4b4e554a (JUNK) size:4116 pos:4450
avi debug: </list 'strl'>
avi debug: found Chunk fourcc:4b4e554a (JUNK) size:260 pos:8574
avi debug: </list 'hdrl'>
qt4 debug: New Event: type 1103
avi debug: found Chunk fourcc:5453494c (LIST) size:23422906 pos:8842
qt4 debug: I was here, updating your status
avi debug: skipping movi chunk
avi debug: found Chunk fourcc:31786469 (idx1) size:163328 pos:23431756
qt4 debug: New Event: type 1103
avi debug: idx1: index entry:10208
avi debug: </list 'AVI '>
avi debug: * LIST-root size:23595092 pos:0
avi debug: + RIFF-AVI size:23595084 pos:0
avi debug: | + LIST-hdrl size:8822 pos:12
avi debug: | | + avih size:56 pos:24
avi debug: | | + LIST-strl size:4240 pos:88
avi debug: | | | + strh size:56 pos:100
avi debug: | | | + strf size:40 pos:164
avi debug: | | | + JUNK size:4116 pos:212
avi debug: | | + LIST-strl size:4230 pos:4336
avi debug: | | | + strh size:56 pos:4348
avi debug: | | | + strf size:30 pos:4412
avi debug: | | | + JUNK size:4116 pos:4450
avi debug: | | + JUNK size:260 pos:8574
avi debug: | + LIST-movi size:23422906 pos:8842
avi debug: | + idx1 size:163328 pos:23431756
avi debug: AVIH: 2 stream, flags HAS_INDEX IS_INTERLEAVED TRUST_CKTYPE
avi debug: stream[0] rate:30000 scale:1001 samplesize:0
avi debug: stream[0] video(XVID) 720x480 24bpp 29.970030fps
main debug: selecting program id=0
avi debug: stream[1] rate:16000 scale:1 samplesize:1
avi debug: stream[1] audio(0x55) 2 channels 48000Hz 0bits
qt4 debug: New Event: type 1108
avi debug: stream[0] created 4271 index entries
avi debug: stream[1] created 5937 index entries
avi debug: stream[0] length:142 (based on index)
avi debug: stream[1] length:142 (based on index)
avi warning: broken or missing index, 'seek' will be approximative or will exhibit strange behavior
avi debug: Fixing AVI index
avi warning: creating index from LIST-movi, will take time !
avi debug: stream[0] creating 4271 index entries
avi debug: stream[1] creating 5937 index entries
avi debug: stream[0] length:142 (based on index)
avi debug: stream[1] length:142 (based on index)
avi warning: broken or missing index, 'seek' will be approximative or will exhibit strange behavior
main debug: using demux module "avi"
main debug: TIMER module_Need() : 4189.000 ms - Total 4189.000 ms / 1 intvls (Avg 4189.000 ms)
main debug: looking for a subtitle file in C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\
main debug: looking for decoder module: 35 candidates
avcodec debug: libavcodec initialized (interface 3357952 )
avcodec debug: using direct rendering
avcodec debug: ffmpeg codec (MPEG-4 Video) started
main debug: using decoder module "avcodec"
main debug: TIMER module_Need() : 22.000 ms - Total 22.000 ms / 1 intvls (Avg 22.000 ms)
main debug: thread 5924 (decoder) created at priority 0 (input/decoder.c:217)
main debug: looking for decoder module: 35 candidates
main debug: using decoder module "mpeg_audio"
main debug: TIMER module_Need() : 1.000 ms - Total 1.000 ms / 1 intvls (Avg 1.000 ms)
main debug: thread 5952 (decoder) created at priority 2 (input/decoder.c:217)
main debug: thread started
main debug: `C:\VIDEO\MUSIC\MUTE MATH - FLESH AND BONES ELECTRIC FUN DVD\01 Collapse.avi' successfully opened
avi debug: old:0 < new 0
mpeg_audio debug: MPGA channels:2 samplerate:48000 bitrate:128
main debug: control type=1
main debug: no aout present, spawning one
main debug: looking for audio output module: 3 candidates
aout_directx debug: OpenAudio
main debug: thread started
main debug: no usable vout present, spawning one
If I answer 'don't repair' the file is played well.