Fix #1808 on AVI fixing.